# roblox-garden

./: .dockerignore  .env.example  .gitignore  CHANNEL_SETUP.md  DOCKER.md  Dockerfile  QUICK_DEPLOY.md  RARITY_UPDATE_REPORT.md  README.md  SCHEDULER_UPDATE.md  SETUP.md  STALE_DATA_FIX.md  check_setup.py  check_sprinkler.py  check_unknown_items.py  demo.py  demo_channel_ids.py  demo_complete.py  deploy-prod.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  get_channel_ids.py  health_check.sh  logs.sh  monitor_api.py  overview.py  pyproject.toml  requirements.txt  root-deploy.sh  run_demo.py  setup-linux.sh  setup.sh  simple_channel_setup.py  start.sh  start_background.sh  stop.sh  update.sh  vps-setup.sh
.github/: copilot-instructions.md
roblox_garden/: __init__.py  __main__.py
roblox_garden/config/: settings.py
roblox_garden/core/: application.py
roblox_garden/filters/: __init__.py  item_filters.py
roblox_garden/models/: shop.py
roblox_garden/telegram/: bot.py  bot_aiogram.py
roblox_garden/utils/: formatters.py  rarity_parser.py  static_rarity_db.py
roblox_garden/websocket/: __init__.py  client.py
roblox_garden_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
secrets/: README.md
tests/: test_filters.py
